--- a/reseña.html
+++ b/reseña.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Reseñas</title>
-	<link type="text/css" rel="stylesheet" href="css/estilo.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-<link href="css/fontawesome-all.css" type="text/css" rel="stylesheet">
-  </head>
-  <body>
-  <div class="header">
-	<h1> Berserk's Comics </h1>
-  </div>
-<div class="navbar" id="navbar">
-  <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
-  <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
-  <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
-  <a class="active" href="#"><i class="fa fa-fw fa-user"></i> Reseñas</a>
-</div>
-	<script src="js/topnav.js"></script>
-</body>
+    <head>
+
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Reseñas</title>
+        <link type="text/css" rel="stylesheet" href="css/estilo.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+        <link href="css/fontawesome-all.css" type="text/css" rel="stylesheet">
+
+        <!--favicon-->
+        <link rel="icon" href="images/review.png">
+
+
+    </head>
+
+
+
+    <body> 
+        <div class="header">
+            <h1> Berserk's Comics </h1>
+        </div>
+        <div class="navbar" id="navbar">
+            <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
+            <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
+            <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
+            <a class="active" href="#"><i class="fa fa-fw fa-user"></i> Reseñas</a>
+        </div>
+        <script src="js/topnav.js"></script>
+    </body>
 </html>
