--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="contenedor-principal">
             <header>
                 <div class="header">
-                    <h1> Berserk's Comics </h1>
+                    <h1 class="titulo"> Berserk's Comics </h1>
                 </div>
                 <div class="navbar" id="navbar">
                     <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
@@ -40,7 +40,7 @@
                             quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                             consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                             cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
+                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     </div>
                 </article>
                 <div class="slides_contenedor">
@@ -104,45 +104,10 @@
                     <p>Copyright 2018</p>
                 </div>
             </footer>
-
+		</div>
         <!--favicon-->
         <link rel="icon" href="images/home.png">
+		<script src="js/topnav.js" type="text/javascript"></script>
+			</body>
 
-
-
-        <title>Home - Berserk's Comics</title>
-    </head>
-
-    <!-- CUERPO --> 
-
-    <body>
-        <div class="header">
-            <h1> Berserk's Comics </h1>
-        </div>
-        <div class="navbar" id="navbar">
-            <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
-            <a href="about.html"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
-            <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
-            <a href="reseña.html"><i class="fa fa-fw fa-user"></i> Reseñas</a>
-        </div>
-
-        <div class="container">
-            <h1 class="my-3 left">Ultimas novedades</h1>
-            <div class="slides_container">
-                <ul class="rslides" id="novedades">
-                    <li><img src="images/1.jpg" alt=""><p class="texto">Imagen 1</p></li>
-                    <li><img src="images/2.jpg" alt=""><p class="texto">Imagen 2</p></li>
-                    <li><img src="images/3.jpg" alt=""><p class="texto">Imagen 3</p></li>
-                </ul>
-                <ul class="rslides_tabs" id="lista">
-                    <li><a href="#"><img src="images/1_tn.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="images/2_tn.jpg" alt=""></a></li>
-                    <li><a href="#"><img src="images/3_tn.jpg" alt=""></a></li>
-                </ul>
-            </div>
-
-        </div>
-        <script src="js/topnav.js"></script>
-
-    </body>
 </html>
