adding About footer

--- a/about.html
+++ b/about.html
@@ -20,72 +20,90 @@
     <body>
         <!--Encabezado-->
         <div class="contenedor-principal">
-        <header>
-        <div class="header">
-            <h1 class="titulo"> Berserk's Comics </h1>
-        </div>
-
-        <div class="navbar" id="navbar">
-            <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
-            <a class="active" href="#"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
-            <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
-            <a href="reseña.html"><i class="fa fa-fw fa-user"></i> Reseñas</a>
-        </div>
-</header>
-
-        <div class="contenedor">
-
-            <h1 class="my-3 centrar">¿Quienes somos?</h1>
-
-            <div class="row">
-
-
-                <div class="card">
-                    <img src="images/matt.png" alt="matt" style="width:100%">
-                    <h1>Matias Morales</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>University of Comahue</p>
-                    <a href="#"><i class="fa fa-dribbble"></i></a> 
-                    <a href="#"><i class="fa fa-twitter"></i></a> 
-                    <a href="#"><i class="fa fa-linkedin"></i></a> 
-                    <a href="#"><i class="fa fa-facebook"></i></a> 
-                    <p><button>Contactar</button></p>
+            <header>
+                <div class="header">
+                    <h1 class="titulo"> Berserk's Comics </h1>
                 </div>
 
-                <div class="card">
-                    <img src="images/mati.png" alt="mati" style="width:100%">
-                    <h1>Matias Infante</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>University of Comahue</p>
-                    <a href="#"><i class="fa fa-dribbble"></i></a> 
-                    <a href="#"><i class="fa fa-twitter"></i></a> 
-                    <a href="#"><i class="fa fa-linkedin"></i></a> 
-                    <a href="#"><i class="fa fa-facebook"></i></a> 
-                    <p><button>Contactar</button></p>
+                <div class="navbar" id="navbar">
+                    <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a> 
+                    <a class="active" href="#"><i class="fas fa-user-astronaut"></i> Nosotros</a> 
+                    <a href="Contact.html"><i class="fa fa-fw fa-envelope"></i> Contacto</a> 
+                    <a href="reseña.html"><i class="fa fa-fw fa-user"></i> Reseñas</a>
+                </div>
+            </header>
+
+            <div class="contenedor">
+
+                <h1 class="my-3 centrar">¿Quienes somos?</h1>
+
+                <div class="row">
+
+
+                    <div class="card">
+                        <img src="images/matt.png" alt="matt" style="width:100%">
+                        <h1>Matias Morales</h1>
+                        <p class="title">CEO & Founder, Example</p>
+                        <p>University of Comahue</p>
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a> 
+                        <a href="#"><i class="fa fa-linkedin"></i></a> 
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                        <p><button>Contactar</button></p>
+                    </div>
+
+                    <div class="card">
+                        <img src="images/mati.png" alt="mati" style="width:100%">
+                        <h1>Matias Infante</h1>
+                        <p class="title">CEO & Founder, Example</p>
+                        <p>University of Comahue</p>
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a> 
+                        <a href="#"><i class="fa fa-linkedin"></i></a> 
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                        <p><button>Contactar</button></p>
+                    </div>
+
+                    <div class="card">
+                        <img src="images/martin.png" alt="martin" style="width:100%">
+                        <h1>Martin Lillo</h1>
+                        <p class="title">CEO & Founder, Example</p>
+                        <p>University of Comahue</p>
+                        <a href="#"><i class="fa fa-dribbble"></i></a> 
+                        <a href="#"><i class="fa fa-twitter"></i></a> 
+                        <a href="#"><i class="fa fa-linkedin"></i></a> 
+                        <a href="#"><i class="fa fa-facebook"></i></a> 
+                        <p><button>Contactar</button></p>
+                    </div>
+
+
                 </div>
 
-                <div class="card">
-                    <img src="images/martin.png" alt="martin" style="width:100%">
-                    <h1>Martin Lillo</h1>
-                    <p class="title">CEO & Founder, Example</p>
-                    <p>University of Comahue</p>
-                    <a href="#"><i class="fa fa-dribbble"></i></a> 
-                    <a href="#"><i class="fa fa-twitter"></i></a> 
-                    <a href="#"><i class="fa fa-linkedin"></i></a> 
-                    <a href="#"><i class="fa fa-facebook"></i></a> 
-                    <p><button>Contactar</button></p>
-                </div>
+                <footer>
+                    <div class="autores">
+                        <div class="autor">
+                            <h3>Lillo, Martínuli</h3>
+                            <p class="subtitulo">Desarrollador normal y corriente</p>
+                        </div>
+                        <div class="autor">
+                            <h3>Infante, Matias Ricardo</h3>
+                            <p class="subtitulo">Desarrollador normal y corriente</p>
+                        </div>
+                        <div class="autor">
+                            <h3>Morales, Matias Matt</h3>
+                            <p class="subtitulo">Desarrollador normal y corriente</p>
+                        </div>
+                    </div>
+                    <div class="derechos">
+                        <p>Copyright 2018</p>
+                    </div>
+                </footer>
 
+
+                <script src="js/topnav.js"></script>
 
             </div>
-
-
-
-
-            <script src="js/topnav.js"></script>
-
         </div>
-</div>
 
 
     </body>
